--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,33 @@
-openai
-linkedin_API
-twikit
-argparse
-colorama
-datetime
-configparser
-requests
-ollama
+annotated-types==0.7.0
+anyio==4.4.0
+beautifulsoup4==4.12.3
+certifi==2024.7.4
+charset-normalizer==3.3.2
+colorama==0.4.6
+configparser==7.1.0
+DateTime==5.5
+distro==1.9.0
+exceptiongroup==1.2.2
+filetype==1.2.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.8
+jiter==0.5.0
+linkedin_api==2.1.1
+lxml==5.3.0
+ollama==0.3.1
+openai==1.42.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+pyotp==2.9.0
+pytz==2024.1
+requests==2.32.3
+sniffio==1.3.1
+socksio==1.0.0
+soupsieve==2.6
+tqdm==4.66.5
+twikit==2.1.3
+typing_extensions==4.12.2
+urllib3==2.2.2
+zope.interface==7.0.1
